# google-apis-ex-rs

./: Cargo.toml  README.md  build.rs  protodep.toml
example/: .gitignore  Cargo.toml  drive.rb
example/src/: main.rs
proto/: google.api.rs
src/: auth.rs  drive.rs  error.rs  kms.rs  lib.rs  proto.rs  pubsub.rs  storage.rs  util.rs
src/drive/: client.rs
src/drive/handler/: upload_file.rs
src/kms/: client.rs
src/proto/: google.cloud.kms.v1.rs  google.pubsub.v1.rs  google.storage.v2.rs
src/pubsub/: client.rs
src/storage/: client.rs  object.rs
